@@ -29,6 +29,7 @@ Bernd Eckenfels         - b.eckenfels@seeburger.de
 I Wayan Saryada         - wsaryada@balicamp.com
 Maarten Coene           - maarten_coene@yahoo.com
 Stacey Murphy           - stacey.murphy@ericsson.com
+Jose Rojas              - jrojas@redlinesolutions.co
 
 Thanks to Dave Megginson (info@megginson.com) for the use
 of the XMLWriter and DataWriter classes (now somewhat
