@@ -2,14 +2,13 @@ package com.oopsconsultancy.xmltask.jdk15;
 
 import com.oopsconsultancy.xmltask.XPathAnalyser;
 import com.oopsconsultancy.xmltask.XPathAnalyserClient;
-import com.sun.org.apache.xpath.internal.XPathAPI;
-import com.sun.org.apache.xpath.internal.objects.XBoolean;
-import com.sun.org.apache.xpath.internal.objects.XNodeSet;
-import com.sun.org.apache.xpath.internal.objects.XNumber;
-import com.sun.org.apache.xpath.internal.objects.XObject;
-import com.sun.org.apache.xpath.internal.objects.XString;
 import org.w3c.dom.Node;
-import org.w3c.dom.traversal.NodeIterator;
+import org.w3c.dom.NodeList;
+import org.w3c.dom.ProcessingInstruction;
+
+import javax.xml.xpath.XPath;
+import javax.xml.xpath.XPathConstants;
+import javax.xml.xpath.XPathFactory;
 
 /**
  * uses the JDK 1.5 XPath API
@@ -22,6 +21,22 @@ public class XPathAnalyser15 implements XPathAnalyser {
 
   private XPathAnalyserClient client;
   private Object callback;
+  private XPathFactory xPathFactory;
+  private XPath xPath;
+
+  public XPathAnalyser15() {
+    if (xPathFactory == null) {
+      try {
+        xPathFactory = XPathFactory.newInstance(XPathFactory.DEFAULT_OBJECT_MODEL_URI);
+      } catch (Exception e) {
+        System.out.println("Error: Could not initialize XPath api");
+        e.printStackTrace(System.out);
+      }
+    }
+    if (xPath == null && xPathFactory != null) {
+        xPath = xPathFactory.newXPath();
+    }
+  }
 
   public void registerClient(XPathAnalyserClient client, Object callback) {
     this.client = client;
@@ -30,22 +45,30 @@ public class XPathAnalyser15 implements XPathAnalyser {
 
   public int analyse(Node node, String xpath) throws Exception {
     int count = 0;
-    XObject result = XPathAPI.eval(node, xpath);
-    if (result instanceof XNodeSet) {
-      NodeIterator nl = result.nodeset();
+    Object result = null;
+    try {
+      result = xPath.evaluate(xpath, node, XPathConstants.NODESET);
+    } catch (Exception e) {
+    }
+    if (result instanceof NodeList) {
+      NodeList nl = (NodeList) result;
       Node n;
-      while ((n = nl.nextNode()) != null) {
-        client.applyNode(n, callback);
+      for (int i = 0; i < nl.getLength(); i++) {
+        n = nl.item(i);
+        if (n instanceof ProcessingInstruction) {
+          client.applyNode(n.getNodeValue(), callback);
+        } else {
+          client.applyNode(n, callback);
+        }
         count++;
       }
-    } else if (result instanceof XBoolean
-        || result instanceof XNumber
-        || result instanceof XString) {
-      String str = result.str();
+    } else {
+      result = xPath.evaluate(xpath, node, XPathConstants.STRING);
+      String str = (String) result;
       client.applyNode(str, callback);
       count++;
     }
+
     return count;
   }
 }
-
