@@ -1,11 +1,0 @@
-package com.sun.org.apache.xpath.internal;
-
-import com.sun.org.apache.xpath.internal.objects.XObject;
-import org.w3c.dom.Node;
-
-public class XPathAPI {
-
-  public static XObject eval(Node node, String path) {
-    return null;
-  }
-}
