@@ -1,5 +1,0 @@
-package com.sun.org.apache.xpath.internal.objects;
-
-public class XString extends XObject {
-
-}
