@@ -1,11 +1,0 @@
-package org.apache.xpath;
-
-import org.apache.xpath.objects.XObject;
-import org.w3c.dom.Node;
-
-public class XPathAPI {
-
-  public static XObject eval(Node node, String path) {
-    return null;
-  }
-}
