@@ -1,5 +1,0 @@
-package org.apache.xpath.objects;
-
-public class XNumber extends XObject {
-
-}
