@@ -1,13 +1,0 @@
-package org.apache.xpath.objects;
-
-import org.w3c.dom.traversal.NodeIterator;
-
-public class XObject {
-
-  public String str() {
-    return null;
-  }
-  public NodeIterator nodeset() {
-    return null;
-  }
-}
