@@ -1,5 +1,8 @@
 $Id$
 
+Delete fake XPathAPI, use javax.xml.xpath API instead.
+Add 'factory' attribute to set the XPath factory implementation.
+
 1.16.1 27/10/2009
 
 Now 1.5 compatible
